5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1407/executions/1573_994.log
== TEST (2019-03-13 09:34:22) 
-- CODE:
print(""
-- ERROR:
File "XXXX", line 2
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:34:29) 
-- CODE:
print(""
-- ERROR:
File "XXXX", line 2
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 09:34:31) 
-- CODE:
print(""
-- EXECUTION TIME:
0.214735
-- ERROR:
  File "/home/codebench/codes/1573/994/main.py", line 2
    
            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:34:32) 
-- CODE:
print(""
-- ERROR:
File "XXXX", line 2
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:34:40) 
-- CODE:
prin("")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin("")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:34:55) 
-- CODE:
print(""
-- ERROR:
File "XXXX", line 2
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:38:25) 
-- CODE:
 print(""
-- ERROR:
File "XXXX", line 1
    print(""
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:39:22) 
-- CODE:
a = 1
if (a == 1):
    print("1")
 if (a == 2):
    print("2")
-- ERROR:
File "XXXX", line 4
    if (a == 2):
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:51:17) 
-- CODE:
 print(""
-- ERROR:
File "XXXX", line 1
    print(""
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:51:30) 
-- CODE:
print(""
-- ERROR:
File "XXXX", line 2
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:52:25) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:53:00) 
-- CODE:
while (i < 10)
-- ERROR:
File "XXXX", line 1
    while (i < 10)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:53:15) 
-- CODE:
Area = 10 
print(7 + area) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(7 + area) 
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 09:53:56) 
-- CODE:
x = int(input("Digite o preco: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:06:47) 
-- CODE:
x = input()
if (x == "1"):
    print("resultado = 1")
if (x == "2"):
print("resultado = 2")
-- ERROR:
File "XXXX", line 5
    print("resultado = 2")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:07:32) 
-- CODE:
a = 1
if (a == 1):
    print("1")
 if (a == 2):
    print("2")
-- ERROR:
File "XXXX", line 4
    if (a == 2):
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:07:54) 
-- CODE:
print("Final do programa" 
-- ERROR:
File "XXXX", line 2
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:08:04) 
-- CODE:
from numpy import *

# vetor de 4 elementos:
vet = array([0,1,2,3])

# quinto elemento:
print(vet[4])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:08:28) 
-- CODE:
if (reta == 3):
 	mensagem = "ponto nao pertence a reta"
	print(mensagem)
-- ERROR:
File "XXXX", line 3
    print(mensagem)
                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:08:57) 
-- CODE:
print(1/0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(1/0)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:09:30) 
-- CODE:
round(2**(0,5), 8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(2**(0,5), 8)
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:09:53) 
-- CODE:
b = "1"
soma = b + 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    soma = b + 2
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:13:13) 
-- CODE:
print("pau)
-- ERROR:
File "XXXX", line 1
    print("pau)
              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:13:22) 
-- CODE:
print(pau")
-- ERROR:
File "XXXX", line 1
    print(pau")
              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:13:35) 
-- CODE:
print("pau)
-- ERROR:
File "XXXX", line 1
    print("pau)
              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:13:47) 
-- CODE:
print("ufa m)
-- ERROR:
File "XXXX", line 1
    print("ufa m)
                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:13:58) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:18:48) 
-- CODE:
print( Bruce Wayne"
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne"
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:18:57) 
-- CODE:
print("Bruce Wayne"
-- ERROR:
File "XXXX", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:06:52) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:03:55) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.132023
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
